welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: type YELLOW is not a member of object java.awt.Color
	setCouleurBrosse(c:Color.YELLOW)
                                 ^